--- a/sass/main.sass
+++ b/sass/main.sass
@@ -38,5 +38,12 @@ body textarea:required:valid
 .results
 	min-height: 100vh
 
+.result_seo
+	text-align: center
+	margin-bottom: 80px
+	>span
+		h3
+			display: inline
+
 //ALWAYS END
 @import "media"
