--- a/sass/header.sass
+++ b/sass/header.sass
@@ -103,7 +103,10 @@ h1
 
 h2
 	font-size: em(36)
-	margin-bottom: 40px
+
+.h2_desc
+	font-size: em(22)
+	margin-bottom: 80px
 
 .table
 	display: table
