--- a/sass/main.sass
+++ b/sass/main.sass
@@ -36,7 +36,7 @@ body textarea:required:valid
 
 //Custom Styles Here
 .results
-	min-height: 100vh
+	text-align: center
 
 .result_seo
 	text-align: center
@@ -44,6 +44,23 @@ body textarea:required:valid
 	>span
 		h3
 			display: inline
+	.total
+		margin-bottom: 10px
+	p
+		font-size: em(14)
+		line-height: em(21)
+		margin-bottom: 20px
+		text-align: justify
+	a
+		display: block
+
+	a, .total
+		padding: 10px
+		color: $lc
+		background: #555
+
+div[id^="chart_div"]
+	margin-bottom: 20px
 
 //ALWAYS END
 @import "media"
