--- a/sass/header.sass
+++ b/sass/header.sass
@@ -41,6 +41,17 @@ table
 
 
 // ##############################
+// external links
+a[href^="http://"]:not(.not_out_link),
+a[href^="https://"]:not(.not_out_link)
+	text-decoration: none
+	&::after
+		content: "\f08e"
+		font-family: fontawesome
+		margin: 0 em(5)
+
+
+// ##############################
 // light blocks
 .light
 	color: $dc
@@ -76,6 +87,8 @@ img:not([alt]), label:not([for]), input[type=submit]:not([value])
 
 // ##############################
 // Common
+html
+	height: 100%
 body
 	font-size: 16px
 	min-width: 320px
@@ -83,6 +96,11 @@ body
 	line-height: 1.6
 	font-family: "RobotoRegular", sans-serif
 	overflow-x: hidden
+	background: #222
+	height: 100%
+
+.pjax-container
+	height: 100%
 
 .hidden
 	display: none
@@ -107,6 +125,7 @@ h2
 .h2_desc
 	font-size: em(22)
 	margin-bottom: 80px
+	text-align: center
 
 .table
 	display: table
@@ -264,6 +283,32 @@ a.logo
 	border-radius: 100px
 	box-shadow: inset 0 1px 2px #000
 	padding: 5px
+	/* a
+		border-radius: 50%
+		border: solid 2px	$lc
+		display: block
+		height: 20px
+		margin: 5px 5px
+		position: relative
+		width: 20px
+		&::before
+			content: ''
+			position: absolute
+			top: 10px
+			left: 10px
+			width: 0%
+			height: 0%
+			+mt(.15s)
+		&:hover, &:active
+			&::before
+				content: ''
+				position: absolute
+				top: 0
+				left: 0
+				width: 100%
+				height: 100%
+				background: $dca
+				border-radius: 50% */
 	ul
 		margin: 0
 		li
@@ -340,8 +385,10 @@ a.logo
 // ##############################
 // header
 header
-	background: url(/img/header_bg_min.jpg) no-repeat center top #fff
+	background: url(/img/header_bg_min.jpg) no-repeat center top $dc
 	background-size: cover
+	min-height: 100%
+	min-height: 100vh
 	.table
 		width: 100%
 	.td
