--- a/sass/main.sass
+++ b/sass/main.sass
@@ -36,7 +36,7 @@ body textarea:required:valid
 
 //Custom Styles Here
 .results
-	text-align: center
+	background: #fff
 
 .result_seo
 	text-align: center
@@ -44,6 +44,7 @@ body textarea:required:valid
 	>span
 		h3
 			display: inline
+			font-size: em(20)
 	.total
 		margin-bottom: 10px
 	p
@@ -51,16 +52,48 @@ body textarea:required:valid
 		line-height: em(21)
 		margin-bottom: 20px
 		text-align: justify
+		.percent
+			display: block
+			text-align: center
+			font-size: em(34)
+			margin-top: 20px
+
 	a
 		display: block
 
 	a, .total
 		padding: 10px
-		color: $lc
-		background: #555
+		color: #777
+		background: #eee
+		font-size: em(18)
+		text-shadow: 0 1px 0 #fff
+		margin-top: 20px
+		margin-bottom: 20px
 
 div[id^="chart_div"]
 	margin-bottom: 20px
+
+.guarantees
+	background: #eee
+	color: #777
+	text-shadow: 0 1px 0 #fff
+
+.guarantee
+	text-align: center
+	>span
+		h3
+			display: inline
+			font-size: em(20)
+	a
+		display: block
+		color: #777
+		margin-top: 10px
+		margin-bottom: 60px
+
+
+.services
+	background: #fff
+	
 
 //ALWAYS END
 @import "media"
