--- a/sass/header.sass
+++ b/sass/header.sass
@@ -35,8 +35,8 @@ table
 // ##############################
 // selection
 ::selection
-	color: $lc
-	background-color: $dca
+	color: $ff
+	background-color: $ac
 	text-shadow: none
 
 
@@ -46,37 +46,37 @@ a[href^="http://"]:not(.not_out_link),
 a[href^="https://"]:not(.not_out_link)
 	text-decoration: none
 	&::after
-		content: "\f08e"
-		font-family: fontawesome
+		content: "\e817"
+		font-family: fontello
 		margin: 0 em(5)
 
 
 // ##############################
 // light blocks
 .light
-	color: $dc
+	color: $ca
 	a, &:focus
-		color: $dc
+		color: $ca
 		&:hover, &:active
-			color: $dcah
+			color: $ac
 	.main_mnu
 		a
 			&::after
-				background-color: $dcah
+				background-color: $ac
 
 
 // ##############################
 // dark blocks
 .dark
-	color: $lc
+	color: $ff
 	a, &:focus
-		color: $lc
+		color: $ff
 		&:hover, &:active
-			color: $lcah
+			color: $ac
 	.main_mnu
 		a
 			&::after
-				background-color: $lcah
+				background-color: $ac
 
 
 // ##############################
@@ -88,7 +88,7 @@ img:not([alt]), label:not([for]), input[type=submit]:not([value])
 // ##############################
 // Common
 html
-	height: 100%
+	// height: 100%
 body
 	font-size: 16px
 	min-width: 320px
@@ -96,8 +96,8 @@ body
 	line-height: 1.6
 	font-family: "RobotoRegular", sans-serif
 	overflow-x: hidden
-	background: #222
-	height: 100%
+	background: $ba
+	// height: 100%
 
 .pjax-container
 	height: 100%
@@ -107,7 +107,7 @@ body
 
 section
 	padding-top: 80px
-	padding-bottom: 40px
+	padding-bottom: 80px
 	
 strong, b, h1, h2, h3, h4, h5, h6
 	font-family: "RobotoBold", sanserif
@@ -137,12 +137,12 @@ h2
 
 p
 	text-align: justify
-	margin-bottom: em(34)
-	font-size: em(21)
-	line-height: em(34)
+	// margin-bottom: em(34)
+	// font-size: em(21)
+	// line-height: em(34)
 
 *
-	outline-color: $dca
+	outline-color: $ac
 
 // sf-menu
 ul.sf-menu
@@ -161,7 +161,7 @@ ul.sf-menu
 
 // sf-mega
 div.sf-mega
-	background: #333
+	background: $bb
 	font-size: 18px
 	p
 		font-size: 18px
@@ -169,29 +169,33 @@ div.sf-mega
 // ##############################
 // mobile_mnu
 #mobile_mnu
-	background-color: $dc
-	// color: $dca
+	background-color: $ba
+	// color: $ac
 
 
 // ##############################
 // top_line
 .top_line
-	background: #2a2a2a
+	background: $bb
 	.aphorism
 		padding: 10px 0
 		display: inline-block
-		color: darken(#fff, 50%)
+		color: darken($ff, 50%)
 	.sf_menu_wrap
 		position: relative
 		float: right
 	ul.sf-menu
 		li
-			background: #2a2a2a
+			background: $bb
 			>a
 				padding: 10px 10px 10px 34px
-				color: $lc
+				color: $ff
 			&:hover
-				+darken_bg(#2a2a2a)
+				+darken_bg($bb)
+
+	.mobile_phone, .email, .share
+		&::after, &::before
+			font-family: fontello
 
 	.mobile_phone
 		&::after, &::before
@@ -203,25 +207,25 @@ div.sf-mega
 
 	.mobile_phone
 		&::after, &::before
-			content: '\f10b'
+			content: '\e80d'
 
 	.email
 		&::after, &::before
-			content: '\f003'
+			content: '\e80f'
 
 	.share
 		&::after, &::before
-			content: '\f1e0'
+			content: '\e816'
 
 	div.sf-mega
 		text-align: center
 		a.vk
 			font-size: em(26)
 			padding: 20px 40px
-			background: $dc
+			background: $ba
 			text-align: center
 			display: inline-block
-			color: $lc
+			color: $ff
 			margin-bottom: 20px
 		p
 			font-size: em(14)
@@ -232,9 +236,9 @@ div.sf-mega
 
 // ##############################
 .top_mnu
-	background: $dc
+	background: $ba
 	border-top: solid 1px #000
-	border-bottom: solid 1px #555
+	border-bottom: solid 1px $ca
 	font-size: em(20)
 	.container
 		position: relative
@@ -242,11 +246,11 @@ div.sf-mega
 		float: right
 	ul.sf-menu
 		li
-			background: $dc
+			background: $ba
 			&:hover, &.active
-				+lighten_bg($dc)
+				+lighten_bg($ba)
 			a
-				color: $lc
+				color: $ff
 		>li
 			padding-top: 13px
 			padding-bottom: 13px
@@ -257,6 +261,9 @@ a.logo
 	&:hover
 		text-decoration: none
 		color: inherit
+	img
+		width: 80px
+		height: 50px
 
 .toggle-mnu
 	float: right
@@ -278,14 +285,14 @@ a.logo
 	z-index: 10
 
 .right_nav
-	background: $dc
-	border-bottom: solid 1px #555
+	background: $ba
+	border-bottom: solid 1px $ca
 	border-radius: 100px
 	box-shadow: inset 0 1px 2px #000
 	padding: 5px
 	/* a
 		border-radius: 50%
-		border: solid 2px	$lc
+		border: solid 2px	$ff
 		display: block
 		height: 20px
 		margin: 5px 5px
@@ -307,14 +314,14 @@ a.logo
 				left: 0
 				width: 100%
 				height: 100%
-				background: $dca
+				background: $ac
 				border-radius: 50% */
 	ul
 		margin: 0
 		li
 			a
 				border-radius: 50%
-				border: solid 2px	$lc
+				border: solid 2px	$ff
 				display: block
 				height: 20px
 				margin: 5px 5px
@@ -337,7 +344,7 @@ a.logo
 						left: 0
 						width: 100%
 						height: 100%
-						background: $dca
+						background: $ac
 						border-radius: 50%
 
 
@@ -363,7 +370,7 @@ a.logo
 	padding-left: 10px
 	font-family: RobotoBold
 	span
-		color: $dca
+		color: $ac
 
 
 // ##############################
@@ -375,27 +382,29 @@ a.logo
 		display: inline-block
 		padding: 20px
 		&::before
-			background: $dca
+			background: $ac
 		&:hover, &:focus
 			text-decoration: none
-			+lighten_bg(#222)
+			+lighten_bg($ba)
 			color: inherit
 
 
 // ##############################
 // header
 header
-	background: url(/img/header_bg_min.jpg) no-repeat center top $dc
+	background: url(/img/header_bg_min.jpg) no-repeat center top $ba
 	background-size: cover
-	min-height: 100%
-	min-height: 100vh
+	padding-top: 40px
+	padding-bottom: 80px
+	min-height: 600px
 	.table
 		width: 100%
 	.td
-		height: calc(100vh - 45.33px - 88px)
-
+		height: calc(100vh - 45.33px - 88px - 40px)
+		// min-height: 100%
 	h1
-		margin-top: 40px
+		span
+			color: $ac
 
 	form
 		text-align: center
@@ -404,11 +413,11 @@ header
 		margin-left: auto
 		margin-right: auto
 		input
-			background: #fff
+			background: $ff
 			padding: 5px 20px
 			display: inline-block
-			border: solid 2px $dca
-			color: $dc
+			border: solid 2px $ac
+			color: $ba
 		
 
 	a.no_site
@@ -442,9 +451,9 @@ input[name="Бюджет/мес"]
 
 .button_clac
 	+mt(.15s)
-	background-color: $dca
-	border: solid 2px $dca
-	color: $dc
+	background-color: $ac
+	border: solid 2px $ac
+	color: $ba
 	cursor: pointer
 	display: inline-block
 	float: right
@@ -453,8 +462,8 @@ input[name="Бюджет/мес"]
 	padding: 5px 20px
 	width: 25%
 	&:active, &:hover
-		+darken_bg($dca)
-		+darken_bdc($dca)
+		+darken_bg($ac)
+		+darken_bdc($ac)
 
 .hidden_inputs
 	display: none
@@ -462,26 +471,26 @@ input[name="Бюджет/мес"]
 	text-align: center
 	width: 100%
 	input
-		border: solid 2px $dca
+		border: solid 2px $ac
 		&:not(:first-child)
-			border-left: solid 1px $dca
-			border-right: solid 2px $dca
+			border-left: solid 1px $ac
+			border-right: solid 2px $ac
 		&:first-child
-			border-left: solid 2px $dca
-			border-right: solid 2px $dca
+			border-left: solid 2px $ac
+			border-right: solid 2px $ac
 
 .budget_desc
-	color: $lc
+	color: $ff
 	margin: 20px 0
 	max-width: 720px
 	margin-left: auto
 	margin-right: auto
 
 .button_calc
-	background-color: $dca
+	background-color: $ac
 	display: inline-block
-	border: solid 2px $dca
-	color: $dc
+	border: solid 2px $ac
+	color: $ba
 	font-size: em(38)
 	margin: 0
 	padding: 5px 20px
