--- a/app/libs/fontello/css/fontello.css
+++ b/app/libs/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?93277417');
-  src: url('../font/fontello.eot?93277417#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?93277417') format('woff'),
-       url('../font/fontello.ttf?93277417') format('truetype'),
-       url('../font/fontello.svg?93277417#fontello') format('svg');
+  src: url('../font/fontello.eot?15396968');
+  src: url('../font/fontello.eot?15396968#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?15396968') format('woff'),
+       url('../font/fontello.ttf?15396968') format('truetype'),
+       url('../font/fontello.svg?15396968#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?93277417#fontello') format('svg');
+    src: url('../font/fontello.svg?15396968#fontello') format('svg');
   }
 }
 */
@@ -54,29 +54,29 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-contacts:before { content: '\e800'; } /* '' */
+.icon-mail:before { content: '\e800'; } /* '' */
 .icon-home:before { content: '\e801'; } /* '' */
-.icon-chart-line:before { content: '\e802'; } /* '' */
-.icon-chart-line-1:before { content: '\e803'; } /* '' */
-.icon-chart-pie:before { content: '\e804'; } /* '' */
-.icon-address-book:before { content: '\e805'; } /* '' */
-.icon-vkontakte:before { content: '\e806'; } /* '' */
-.icon-vk:before { content: '\e807'; } /* '' */
-.icon-rouble:before { content: '\e808'; } /* '' */
-.icon-vkontakte-rect:before { content: '\e809'; } /* '' */
-.icon-behance:before { content: '\e80a'; } /* '' */
-.icon-vkontakte-rect-1:before { content: '\e80b'; } /* '' */
-.icon-mobile:before { content: '\e80c'; } /* '' */
-.icon-mobile-1:before { content: '\e80d'; } /* '' */
-.icon-mail:before { content: '\e80f'; } /* '' */
-.icon-mail-1:before { content: '\e810'; } /* '' */
-.icon-share:before { content: '\e814'; } /* '' */
-.icon-share-1:before { content: '\e815'; } /* '' */
-.icon-share-2:before { content: '\e816'; } /* '' */
-.icon-link-ext:before { content: '\e817'; } /* '' */
-.icon-link:before { content: '\e818'; } /* '' */
-.icon-shield:before { content: '\e819'; } /* '' */
-.icon-puzzle:before { content: '\e81a'; } /* '' */
-.icon-behance-1:before { content: '\e81b'; } /* '' */
-.icon-behance-squared:before { content: '\e81c'; } /* '' */
-.icon-youtube:before { content: '\e81d'; } /* '' */
+.icon-link-ext:before { content: '\e802'; } /* '' */
+.icon-share:before { content: '\e803'; } /* '' */
+.icon-mobile:before { content: '\e804'; } /* '' */
+.icon-chart-pie:before { content: '\e805'; } /* '' */
+.icon-chart-line:before { content: '\e806'; } /* '' */
+.icon-rouble:before { content: '\e807'; } /* '' */
+.icon-puzzle:before { content: '\e808'; } /* '' */
+.icon-shield:before { content: '\e809'; } /* '' */
+.icon-behance-1:before { content: '\e80a'; } /* '' */
+.icon-vkontakte:before { content: '\e80b'; } /* '' */
+.icon-youtube:before { content: '\e80c'; } /* '' */
+.icon-link:before { content: '\e80d'; } /* '' */
+.icon-mobile-1:before { content: '\e80e'; } /* '' */
+.icon-chart-line-1:before { content: '\e80f'; } /* '' */
+.icon-contacts:before { content: '\e810'; } /* '' */
+.icon-share-2:before { content: '\e811'; } /* '' */
+.icon-vk:before { content: '\e812'; } /* '' */
+.icon-rocket:before { content: '\e813'; } /* '' */
+.icon-sliders:before { content: '\e814'; } /* '' */
+.icon-megaphone:before { content: '\e815'; } /* '' */
+.icon-gauge:before { content: '\e816'; } /* '' */
+.icon-skype:before { content: '\e817'; } /* '' */
+.icon-credit-card-1:before { content: '\e818'; } /* '' */
+.icon-up-open-1:before { content: '\e81b'; } /* '' */
