--- a/app/libs/fontello/css/fontello-codes.css
+++ b/app/libs/fontello/css/fontello-codes.css
@@ -2,26 +2,21 @@
 .icon-mail:before { content: '\e800'; } /* '' */
 .icon-home:before { content: '\e801'; } /* '' */
 .icon-link-ext:before { content: '\e802'; } /* '' */
-.icon-share:before { content: '\e803'; } /* '' */
-.icon-mobile:before { content: '\e804'; } /* '' */
-.icon-chart-pie:before { content: '\e805'; } /* '' */
-.icon-chart-line:before { content: '\e806'; } /* '' */
-.icon-rouble:before { content: '\e807'; } /* '' */
-.icon-puzzle:before { content: '\e808'; } /* '' */
-.icon-shield:before { content: '\e809'; } /* '' */
-.icon-behance-1:before { content: '\e80a'; } /* '' */
-.icon-vkontakte:before { content: '\e80b'; } /* '' */
-.icon-youtube:before { content: '\e80c'; } /* '' */
-.icon-link:before { content: '\e80d'; } /* '' */
-.icon-mobile-1:before { content: '\e80e'; } /* '' */
-.icon-chart-line-1:before { content: '\e80f'; } /* '' */
-.icon-contacts:before { content: '\e810'; } /* '' */
-.icon-share-2:before { content: '\e811'; } /* '' */
-.icon-vk:before { content: '\e812'; } /* '' */
-.icon-rocket:before { content: '\e813'; } /* '' */
-.icon-sliders:before { content: '\e814'; } /* '' */
-.icon-megaphone:before { content: '\e815'; } /* '' */
-.icon-gauge:before { content: '\e816'; } /* '' */
-.icon-skype:before { content: '\e817'; } /* '' */
-.icon-credit-card-1:before { content: '\e818'; } /* '' */
-.icon-up-open-1:before { content: '\e81b'; } /* '' */
+.icon-mobile:before { content: '\e803'; } /* '' */
+.icon-chart-pie:before { content: '\e804'; } /* '' */
+.icon-chart-line:before { content: '\e805'; } /* '' */
+.icon-rouble:before { content: '\e806'; } /* '' */
+.icon-puzzle:before { content: '\e807'; } /* '' */
+.icon-shield:before { content: '\e808'; } /* '' */
+.icon-vkontakte:before { content: '\e809'; } /* '' */
+.icon-mobile-1:before { content: '\e80a'; } /* '' */
+.icon-chart-line-1:before { content: '\e80b'; } /* '' */
+.icon-contacts:before { content: '\e80c'; } /* '' */
+.icon-share-2:before { content: '\e80d'; } /* '' */
+.icon-vk:before { content: '\e80e'; } /* '' */
+.icon-rocket:before { content: '\e80f'; } /* '' */
+.icon-megaphone:before { content: '\e810'; } /* '' */
+.icon-skype:before { content: '\e811'; } /* '' */
+.icon-info:before { content: '\e812'; } /* '' */
+.icon-down-open-big:before { content: '\e813'; } /* '' */
+.icon-up-open-big:before { content: '\e814'; } /* '' */
