--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -84,7 +84,7 @@
 		font-size: em(30)
 		width: 100%
 
-	.button_clac
+	.button_go
 		font-size: em(30)
 		width: 100%
 		margin-bottom: 40px
@@ -126,7 +126,7 @@
 		font-size: em(18)
 		width: 100%
 
-	.button_clac
+	.button_go
 		font-size: em(18)
 		width: 100%
 
