--- a/sass/header.sass
+++ b/sass/header.sass
@@ -395,12 +395,12 @@ header
 		.span, .word2
 			color: $ac
 		span
-			visibility: hidden
+			// visibility: hidden
 	.desc
 		text-align: center
 		color: $ee
 		span
-			visibility: hidden
+			// visibility: hidden
 
 	form
 		text-align: center
@@ -445,7 +445,7 @@ input[name="Бюджет/мес"]
 	width: 75%
 
 
-.button_clac
+.button_go
 	+mt(.15s)
 	background-color: $ac
 	border: solid 2px $ac
