--- a/sass/main.sass
+++ b/sass/main.sass
@@ -10,7 +10,7 @@
 @import "app/libs/jQuery.mmenu/dist/css/jquery.mmenu.dragopen"
 @import "app/libs/toggle-mnu/toggle-mnu.sass"
 @import "app/libs/CreativeLinkEffects/css/component"
-@import "app/libs/textillate/assets/animate"
+// @import "app/libs/textillate/assets/animate"
 
 // fontello fonts-icons
 @import "app/libs/fontello/css/animation"
